--- a/skupper-tutorial/04-ansible.html
+++ b/skupper-tutorial/04-ansible.html
@@ -157,7 +157,7 @@
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p>So far, we&#8217;ve deployed and configred Skupper and the application manually using <code>skupper</code> and <code>kubectl</code>.
+<p>So far, we&#8217;ve manually deployed and configured Skupper and the application using <code>skupper</code> and <code>kubectl</code>.
 One way to automate it is using <a href="https://www.ansible.com/">Ansible</a>.</p>
 </div>
 </div>
@@ -166,7 +166,7 @@ One way to automate it is using <a href="https://www.ansible.com/">Ansible</a>.<
 <h2 id="ansible"><a class="anchor" href="#ansible"></a>Ansible</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Ansible is an open source IT automation engine that automates provisioning, configuration management, application deployment, orchestration, and many other IT processes.
+<p>Ansible is an open-source IT automation engine that automates provisioning, configuration management, application deployment, orchestration, and many other IT processes.
 There are different ways to <a href="https://docs.ansible.com/ansible/latest/installation_guide/intro_installation.html">install Ansible</a>.
 The easiest way is using <code>pip</code>/<code>pipx</code>.</p>
 </div>
@@ -183,7 +183,7 @@ python3 -m pip install --user ansible</code></pre>
 <div class="sect2">
 <h3 id="_installing_required_ansible_modules"><a class="anchor" href="#_installing_required_ansible_modules"></a>Installing required Ansible modules</h3>
 <div class="paragraph">
-<p>To install Skupper and Kubernetes modules you need to use  the <code>ansible-galaxy</code> command already installed with Ansible.</p>
+<p>To install Skupper and Kubernetes modules, you must use the <code>ansible-galaxy</code> command already installed with Ansible.</p>
 </div>
 <div class="paragraph">
 <p>In a terminal window, run the following command:</p>
@@ -196,13 +196,13 @@ ansible-galaxy collection install skupper.network</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>With modules installed, we can move forward to store the Kubernetes <code>kubeconfig</code> files of noth clusters in the local directory:</p>
+<p>With modules installed, we can move forward to store the Kubernetes <code>kubeconfig</code> files of both clusters in the local directory:</p>
 </div>
 </div>
 <div class="sect2">
 <h3 id="_kubeconfigs"><a class="anchor" href="#_kubeconfigs"></a>Kubeconfigs</h3>
 <div class="paragraph">
-<p>To store the <code>kubeconfig</code> of the <strong>cluster 1</strong> export <code>KUBECONFIG</code> environment variable to the following value and then run <code>oc login</code> to craete the file with the required values:</p>
+<p>To store the <code>kubeconfig</code> of the <strong>cluster 1</strong> export <code>KUBECONFIG</code> environment variable to the following value and then run <code>oc login</code> to create the file with the required values:</p>
 </div>
 <div class="listingblock console-input">
 <div class="content">
@@ -220,8 +220,8 @@ oc login --token=sha256~sq_--server=https://api.sandbox-m4.g2pi.p1.openshiftapps
 </table>
 </div>
 <div class="paragraph">
-<p>Now, we need to store the information of the <strong>cluster 2</strong> into another <code>kubeconfig</code> file.
-First unset the previous <code>KUBECONFIG</code>, switch to <em>kind</em> context, and finally use <code>kind</code> tool to materialize the file:</p>
+<p>Now, we need to store the <strong>cluster 2</strong> information into another <code>kubeconfig</code> file.
+First, unset the previous <code>KUBECONFIG</code>, switch to <em>kind</em> context, and finally use the <code>kind</code> tool to materialize the file:</p>
 </div>
 <div class="listingblock console-input">
 <div class="content">
@@ -232,7 +232,7 @@ kind export kubeconfig --name kind-cluster --kubeconfig `pwd`/privatek8sconfig</
 </div>
 </div>
 <div class="paragraph">
-<p>At this point, we can refer to these files in Ansible to login to the clusters.
+<p>We can now refer to these files in Ansible to log in to the clusters.
 Let&#8217;s deploy the same application seen on <a href="02-onprem.html" class="xref page">Chapter 2</a> but using Ansible instead of using CLI commands.</p>
 </div>
 </div>
@@ -244,9 +244,9 @@ Let&#8217;s deploy the same application seen on <a href="02-onprem.html" class="
 <div class="sect2">
 <h3 id="_application_manifests"><a class="anchor" href="#_application_manifests"></a>Application manifests</h3>
 <div class="paragraph">
-<p>First of all, we need to create the Kubernetes manifests to deploy the application.
-They are the same used before, but as a reminder we&#8217;ll paste it here again.
-Store them into the <code>kubernetes</code> folder, so you can refer them from Ansible playbook:</p>
+<p>First, we must create the Kubernetes manifests to deploy the application.
+They are the same ones used before, but we&#8217;ll paste them here again as a reminder.
+Store them in the <code>kubernetes</code> folder so that you can refer them from the Ansible playbook:</p>
 </div>
 <div class="listingblock console-input">
 <div class="title">kubernetes/public.yaml</div>
@@ -269,7 +269,7 @@ metadata:
   name: passport-storage
 spec:
   ports:
-    - name: http
+ - name: http
       port: 8080
       protocol: TCP
       targetPort: 8080
@@ -300,19 +300,19 @@ spec:
         app.kubernetes.io/version: 1.0.0-SNAPSHOT
     spec:
       containers:
-        - env:
-            - name: KUBERNETES_NAMESPACE
+ - env:
+ - name: KUBERNETES_NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
           envFrom:
-            - configMapRef:
+ - configMapRef:
                 name: postgres-connection
           image: quay.io/rhdevelopers/passport-storage:1.0.0-SNAPSHOT
           imagePullPolicy: Always
           name: passport-storage
           ports:
-            - containerPort: 8080
+ - containerPort: 8080
               name: http
               protocol: TCP
 ---
@@ -363,13 +363,13 @@ spec:
         app: postgres
     spec:
       containers:
-        - name: postgres
+ - name: postgres
           image: 'postgres:14'
           imagePullPolicy: Always
           ports:
-            - containerPort: 5432
+ - containerPort: 5432
           envFrom:
-            - configMapRef:
+ - configMapRef:
                 name: postgres-secret
 ---
 apiVersion: v1
@@ -383,7 +383,7 @@ metadata:
 spec:
   type: "ClusterIP"
   ports:
-    - port: 5432
+ - port: 5432
   selector:
     app: postgres</code></pre>
 </div>
@@ -392,8 +392,8 @@ spec:
 <div class="sect2">
 <h3 id="_ansible_manifests"><a class="anchor" href="#_ansible_manifests"></a>Ansible Manifests</h3>
 <div class="paragraph">
-<p>Now, we need to create the two most important files in Ansible, the inventory and the playbook file.
-In this case, we are going to call the <strong>cluster 1</strong> west, and <strong>cluster 2</strong> east, as these names makes the playbook look more clear.</p>
+<p>We need to create the two most important files in Ansible, the inventory and the playbook file.
+In this case, we will call <strong>cluster 1</strong> west and <strong>cluster 2</strong> east, as these names make the playbook look clearer.</p>
 </div>
 </div>
 <div class="sect2">
@@ -415,13 +415,13 @@ In this case, we are going to call the <strong>cluster 1</strong> west, and <str
       kubeconfig: "{{ inventory_dir }}/privatek8sconfig"
       namespace: default
       links: <i class="conum" data-value="5"></i><b>(5)</b>
-        - host: west
+ - host: west
       services: <i class="conum" data-value="6"></i><b>(6)</b>
         postgres:
           ports:
-            - 5432
+ - 5432
           targets:
-            - type: deployment
+ - type: deployment
               name: postgres</code></pre>
 </div>
 </div>
@@ -433,7 +433,7 @@ In this case, we are going to call the <strong>cluster 1</strong> west, and <str
 </tr>
 <tr>
 <td><i class="conum" data-value="2"></i><b>2</b></td>
-<td>Sets the <code>kubeconfig</code> file created in previous section</td>
+<td>Sets the <code>kubeconfig</code> file created in the previous section</td>
 </tr>
 <tr>
 <td><i class="conum" data-value="3"></i><b>3</b></td>
@@ -449,7 +449,7 @@ In this case, we are going to call the <strong>cluster 1</strong> west, and <str
 </tr>
 <tr>
 <td><i class="conum" data-value="6"></i><b>6</b></td>
-<td>Exposes the postgres service to west</td>
+<td>Exposes the Postgres service to the west</td>
 </tr>
 </table>
 </div>
@@ -457,7 +457,7 @@ In this case, we are going to call the <strong>cluster 1</strong> west, and <str
 <div class="sect2">
 <h3 id="_playbook"><a class="anchor" href="#_playbook"></a>Playbook</h3>
 <div class="paragraph">
-<p>The last thing before we can run Ansible is to create the playbook file which does two things, installs the app to both clusters and installs and configures Skupper:
+<p>The last thing before we can run Ansible is to create the playbook file, which does two things: installs the app to both clusters and installs and configures Skupper:
 Create the following file:</p>
 </div>
 <div class="listingblock console-input">
@@ -465,13 +465,13 @@ Create the following file:</p>
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-yaml hljs" data-lang="yaml">- hosts: localhost
   tasks: <i class="conum" data-value="1"></i><b>(1)</b>
-    - name: Create To public
+ - name: Create To public
       kubernetes.core.k8s: <i class="conum" data-value="2"></i><b>(2)</b>
         src: ./kubernetes/public.yaml
         namespace: asotobue-dev
         kubeconfig: ./publick8sconfig
 
-    - name: Create To private
+ - name: Create To private
       kubernetes.core.k8s:
         src: ./kubernetes/private.yaml
         namespace: default
@@ -479,9 +479,9 @@ Create the following file:</p>
 
 - hosts: all
   collections:
-    - skupper.network <i class="conum" data-value="3"></i><b>(3)</b>
+ - skupper.network <i class="conum" data-value="3"></i><b>(3)</b>
   tasks:
-    - import_role:
+ - import_role:
         name: skupper <i class="conum" data-value="4"></i><b>(4)</b></code></pre>
 </div>
 </div>
@@ -501,7 +501,7 @@ Create the following file:</p>
 </tr>
 <tr>
 <td><i class="conum" data-value="4"></i><b>4</b></td>
-<td>Apply the role for installing Skupper</td>
+<td>Apply for the role of installing Skupper</td>
 </tr>
 </table>
 </div>
@@ -553,21 +553,21 @@ west                       : ok=8    changed=1    unreachable=0    failed=0    s
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-yaml hljs" data-lang="yaml">- hosts: all
   collections:
-    - skupper.network
+ - skupper.network
   tasks:
-    - import_role:
+ - import_role:
         name: skupper_delete
 
 - hosts: localhost
   tasks:
-    - name: Delete public
+ - name: Delete public
       kubernetes.core.k8s:
         state: absent
         src: ./kubernetes/public.yaml
         namespace: asotobue-dev
         kubeconfig: ./publick8sconfig
 
-    - name: Delete private
+ - name: Delete private
       kubernetes.core.k8s:
         state: absent
         src: ./kubernetes/private.yaml
